--- a/style.css
+++ b/style.css
@@ -2,3 +2,18 @@ h1 {
     text-align: center;
 
 }
+<html>
+<head>
+    <meta charset="UTF-8" />
+    <title>teste  </title>
+    <link rel="stylesheet" href="style.css">
+</head>
+        <body style="background-color: orange;">
+       
+        <font size="10">
+        <font face="Verdana">
+        <font color="blue">
+        <marquee> Bruno Bonifácio Baquetti</marquee>
+      </font>
+    </body>
+</html>
